--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java-library'
 apply plugin: 'eclipse'
 
-jar.archiveName = project.name + '.jar'
+jar.archiveName = 'skQuery.jar'
 
 configurations {
     shade
@@ -34,7 +34,9 @@ dependencies {
 	compile (group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.annotation', version: '1.1.0')
 	
 	//Spigot/Bukkit
-	compile (group: 'org.spigotmc', name: 'spigot-api', version: '1.12.2-R0.1-SNAPSHOT')
+	compile (group: 'org.spigotmc', name: 'spigot-api', version: '1.12.2-R0.1-SNAPSHOT') {
+        exclude group: 'net.md-5', module: 'bungeecord-chat'
+    }
 }
 
 jar {
