--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: SkQuery
 authors: [LimeGlass, w00tmast3r]
-version: @version@
+version: 3.6.4MH
 depend: [Skript]
 main: com.w00tmast3r.skquery.SkQuery
